infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miniature-train
  labels:
    app: miniature-train
