infra/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: miniature-train
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector: {}
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - podSelector: {}
      ports:
        - port: 80
        - port: 5432
        - port: 9000
        - port: 5000
        - port: 9090
        - port: 3000
        - port: 3100
        - port: 3200
        - port: 4317
        - port: 4318
        - port: 8000
        - port: 8080
        - port: 9093
